Fix spacing

--- a/less/site.less
+++ b/less/site.less
@@ -5103,8 +5103,13 @@ footer {
       font-size: 20px;
     }
     padding: 40px 180px;
-    .detail strong {
-      font-size: 16px;
+    .detail {
+      p {
+        margin-top: 10px;
+      }
+      strong {
+        font-size: 16px;
+      }
     }
   }
   .title {
